--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link media="(min-width: 768px)"  as="image" href="./images/star-starbucks-tablet.png" />
     <link rel="stylesheet" href="./css/mobile.css">
     <link media="(min-width: 768px)" rel="stylesheet" href="./css/tablet.css">
+    <link media="(min-width: 1024px)" rel="stylesheet" href="./css/computer.css">
 
     <link samesite="None" rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/brands.css" integrity="sha384-S5yUroXKhsCryF2hYGm7i8RQ/ThL96qmmWD+lF5AZTdOdsxChQktVW+cKP/s4eav" crossorigin="anonymous">
     <link samesite="None" rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/fontawesome.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
@@ -186,5 +187,6 @@
     <script src="./js/main.js"></script>
     <script src="./js/mobile.js"></script>
     <script src="./js/tablet.js"></script>
+    <script src="./js/computer.js"></script>
 </body>
 </html>
