--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css" integrity="sha384-Tv5i09RULyHKMwX0E8wJUqSOaXlyu3SQxORObAI08iUwIalMmN5L6AvlPX2LMoSE" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/fontawesome.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/reset.css">
-    <link media="(max-width: 768px)" as="image" href="./images/star-starbucks.png" />
-    <link media="(min-width: 768px)"  as="image" href="./images/star-starbucks-tablet.png" />
+    <link media="(max-width: 768px)" as="image" href="./images/star-starbucks.png" rel="reload" />
+    <link media="(min-width: 768px)"  as="image" href="./images/star-starbucks-tablet.png" rel="reload"/>
     <link rel="stylesheet" href="./css/mobile.css">
     <link media="(min-width: 768px)" rel="stylesheet" href="./css/tablet.css">
     <link media="(min-width: 1024px)" rel="stylesheet" href="./css/computer.css">
