--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css" integrity="sha384-Tv5i09RULyHKMwX0E8wJUqSOaXlyu3SQxORObAI08iUwIalMmN5L6AvlPX2LMoSE" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/fontawesome.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/reset-minifier.css">
     <link media="(max-width: 768px)" as="image" href="./images/star-starbucks.png" rel="preload" />
     <link media="(min-width: 768px)"  as="image" href="./images/star-starbucks-tablet.png" rel="preload"/>
-    <link rel="stylesheet" href="./css/mobile.css">
-    <link media="(min-width: 768px)" rel="stylesheet" href="./css/tablet.css">
-    <link media="(min-width: 1024px)" rel="stylesheet" href="./css/computer.css">
+    <link rel="stylesheet" href="./css/mobile-minifier.css">
+    <link media="(min-width: 768px)" rel="stylesheet" href="./css/tablet-minifier.css">
+    <link media="(min-width: 1024px)" rel="stylesheet" href="./css/computer-minifier.css">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/brands.css" integrity="sha384-S5yUroXKhsCryF2hYGm7i8RQ/ThL96qmmWD+lF5AZTdOdsxChQktVW+cKP/s4eav" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/fontawesome.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
